# MACS-resources

./: .gitignore  .gitmodules  Makefile  README.md  win_configure_work.bat
3dElements/: Circle.blend  Circle.blend1  (+3 more)
ToolsForNewGraphics/: CMakeLists.txt
ToolsForNewGraphics/maxtouchTool/: AppDelegate.h  AppDelegate.mm  Info.plist  ToolPrefix.h  ToolSettings.h  main.cpp  main.m
ToolsForNewGraphics/maxtouchTool.xcodeproj/: project.pbxproj
ToolsForNewGraphics/maxtouchTool.xcodeproj/project.xcworkspace/xcuserdata/anton.katekov.xcuserdatad/: UserInterfaceState.xcuserstate
ToolsForNewGraphics/maxtouchTool.xcodeproj/xcuserdata/anton.katekov.xcuserdatad/xcschemes/: xcschememanagement.plist
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.Alpha.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.ao.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.diffuse.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.normals.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.shadow.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/Generator_s315.specular.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.Alpha.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.Shadow.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.diffuse.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.extraTex_VRayDirt2.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.normals.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Scout/SCBase_s0.specular.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/body/TankBase_p0.ARMY.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/body/TankBase_p0.diffuse.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/body/TankBase_p0.extraTex_VRayDirt2.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/body/TankBase_p0.light.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/body/TankBase_s0.Alpha.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/head/TankTurret_p0.extraTex_VRayDirt2.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/head/Turret_ALL_s0.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/head/Turret_p0.diffuse.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Assets.xcassets/Tank/head/Turret_s0.Alpha.imageset/: Contents.json
ToolsForNewGraphics/maxtouchTool/Base.lproj/: MainMenu.xib
ToolsForNewGraphics/maxtouchTool/MAX/: MAXContentMap.cpp  MAXContentMap.h  MAXContentUtils.cpp  MAXContentUtils.h
ToolsForNewGraphics/maxtouchTool/Objects/: CPPTextureImplNSBitmapImageRep.h  CPPTextureImplNSBitmapImageRep.mm  MCDiffuseComposer.cpp  MCDiffuseComposer.hpp  MCImage.cpp  MCImage.hpp  MCLightComposer.cpp  MCLightComposer.hpp  MCShadowComposer.cpp  MCShadowComposer.hpp  MTDiffuseComposer.h  MTDiffuseComposer.mm  MTLightComposer.h  MTLightComposer.mm  MTOptions.h  MTShadowComposer.h  MTShadowComposer.mm  MTVisualObject.h  MTVisualObject.mm  MTVisualObjectController.h  MTVisualObjectController.mm
ToolsForNewGraphics/maxtouchTool/Objects/EffectProcessors/: MTBlastProcessor.h  MTBlastProcessor.m  MTBlastProcessor.mm
ToolsForNewGraphics/maxtouchTool/Objects/SequenceProcessors/: MTSequenceFrameSubstractor.h  MTSequenceFrameSubstractor.mm
ToolsForNewGraphics/maxtouchTool/Packing/: BitmapComposer.cpp  BitmapComposer.hpp
ToolsForNewGraphics/maxtouchTool/ProcessUnits/: ProcessOptions.hpp  ProcessUnits.cpp  ProcessUnits.hpp
ToolsForNewGraphics/maxtouchTool/Resources/: 1559135259.map
ToolsForNewGraphics/maxtouchTool/UI/: AssimpView.h  AssimpView.m  MainWindow.h  MainWindow.mm
ToolsForNewGraphics/maxtouchTool/UI/AssimpScene/: AssimpNodeView.h  AssimpNodeView.m  AssimpNodeView.mm  AssimpNodeView.xib  AssimpScene.h  AssimpScene.m  AssimpScene.mm  AssimpView.h  AssimpView.mm
ToolsForNewGraphics/maxtouchTool/UI/Base.lproj/: MainMenu.xib
ToolsForNewGraphics/maxtouchTool/UI/Misc/: MTProcessSettings.h  MTProcessSettings.m
ToolsForNewGraphics/maxtouchTool/Utils/: BinaryPack.cpp  BinaryPack.hpp  BinaryPackUtilities.cpp  BinaryPackUtilities.hpp  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  BinaryWriterMemory.cpp  BinaryWriterMemory.hpp  BitmapTexture.h  ByteBuffer.cpp  ByteBuffer.h  Colors.h  FileManager.cpp  FileManager.h  GlobalConstants.h  SimpleContainer.h  StringUtils.cpp  StringUtils.h  Structures.cpp  Structures.h  Utils.h  ZipWrapper.cpp  ZipWrapper.h  stb_image_defined.h
ToolsForNewGraphics/maxtouchTool/Utils/MathKit/: GLKMathTypes.h  GLKMathUtils.h  GLKMatrix3.h  GLKMatrix4.h  GLKQuaternion.h  GLKVector3.h  Geometry.h  Matrix.h
ToolsForNewGraphics/maxtouchTool/Utils/Texture/: Texture.cpp  Texture.h
ToolsForNewGraphics/maxtouchTool/Utils/libJSON/: json_value.cpp  json_writer.cpp
ToolsForNewGraphics/maxtouchTool/Utils/libJSON/json/: reader.h  value.h
ToolsForNewGraphics/maxtouchTool/Utils/libpng/: LibpngWrapper.cpp  LibpngWrapper.h
ToolsForNewGraphics/maxtouchTool/Utils/libpng/libpng/: libpng.h  libpng.m  pnglibconf.h  pngpriv.h
ToolsForNewGraphics/maxtouchTool/Utils/libpng/libpng.xcodeproj/: project.pbxproj
ToolsForNewGraphics/maxtouchTool/Utils/libpng/libpngTests/: Info.plist
ToolsForNewGraphics/maxtouchTool/UtilsObjc/: NSImage+Utils.h  NSImage+Utils.m
ToolsForNewGraphics/maxtouchToolTests/: maxtouchToolTests.mm  testBase.h  testTest.cpp
(+91 files in other folders)
